# wasmdock

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  docs.yml  release.yml
docs/: index.md
examples/hello-wasm/: Cargo.toml  Dockerfile  Makefile  README.md  wasmdock.yml
examples/hello-wasm/src/: main.rs
search/: search_index.json
src/wasmdock/: __init__.py  __main__.py  benchmarker.py  builder.py  cli.py  config.py  doctor.py  models.py  registry.py  runner.py  scaffolder.py
src/wasmdock/templates/: __init__.py
src/wasmdock/templates/data_processor/: Cargo.toml.j2  Dockerfile.j2
src/wasmdock/templates/data_processor/src/: main.rs.j2
src/wasmdock/templates/data_processor_go/: Dockerfile.j2  go.mod.j2  main.go.j2
src/wasmdock/templates/edge_function/: Cargo.toml.j2  Dockerfile.j2
src/wasmdock/templates/edge_function/src/: lib.rs.j2
src/wasmdock/templates/http_server_spin/: Cargo.toml.j2  Dockerfile.j2  spin.toml.j2
src/wasmdock/templates/http_server_spin/src/: lib.rs.j2
src/wasmdock/templates/http_server_wasmtime/: Cargo.toml.j2  Dockerfile.j2
src/wasmdock/templates/http_server_wasmtime/src/: main.rs.j2
tests/: test_benchmarker.py  test_builder.py  test_cli.py  test_config.py  test_doctor.py  test_integration.py  test_registry.py  test_runner.py  test_scaffolder.py
